# controller/modules/journal/api.go
@@ -1,92 +1,6 @@
 package journal
 
-import (
-	"encoding/json"
-	"log"
-	"net/http"
-	"sort"
+import "github.com/go-chi/chi/v5"
 
-	"github.com/go-chi/chi/v5"
-
-	"github.com/reef-pi/reef-pi/controller/utils"
-)
-
-func (s *Subsystem) LoadAPI(r chi.Router) {
-	r.Get("/api/journal/{id}", s.get)
-	r.Get("/api/journal", s.list)
-	r.Put("/api/journal", s.create)
-	r.Post("/api/journal/{id}", s.update)
-	r.Delete("/api/journal/{id}", s.delete)
-	r.Post("/api/journal/{id}/record", s.record)
-	r.Get("/api/journal/{id}/usage", s.getUsage)
-}
-
-func (s *Subsystem) get(w http.ResponseWriter, r *http.Request) {
-	fn := func(id string) (interface{}, error) {
-		return s.Get(id)
-	}
-	utils.JSONGetResponse(fn, w, r)
-}
-func (s *Subsystem) list(w http.ResponseWriter, r *http.Request) {
-	fn := func() (interface{}, error) {
-		return s.List()
-	}
-	utils.JSONListResponse(fn, w, r)
-}
-
-func (s *Subsystem) create(w http.ResponseWriter, r *http.Request) {
-	var p Parameter
-	fn := func() error {
-		return s.Create(p)
-	}
-	utils.JSONCreateResponse(&p, fn, w, r)
-}
-
-func (s *Subsystem) update(w http.ResponseWriter, r *http.Request) {
-	var p Parameter
-	fn := func(id string) error {
-		return s.Update(id, p)
-	}
-	utils.JSONUpdateResponse(&p, fn, w, r)
-}
-
-func (s *Subsystem) delete(w http.ResponseWriter, r *http.Request) {
-	fn := func(id string) error {
-		return s.Delete(id)
-	}
-	utils.JSONDeleteResponse(fn, w, r)
-}
-
-func (s *Subsystem) getUsage(w http.ResponseWriter, req *http.Request) {
-	dec := func(d json.RawMessage) interface{} {
-		var u Entry
-		if err := json.Unmarshal(d, &u); err != nil {
-			log.Println("ERROR:[journal-subsystem] Failed to unmarshal usage value. ", err)
-		}
-		return u
-	}
-	fn := func(id string) (interface{}, error) {
-		if !s.statsMgr.IsLoaded(id) {
-			if err := s.statsMgr.Load(id, dec); err != nil {
-				log.Println("ERROR:[journal-subsystem] Failed to load usage value. ", err)
-			}
-		}
-		stats, err := s.statsMgr.Get(id)
-		if err != nil {
-			return nil, err
-		}
-		sort.Slice(stats.Current, func(i, j int) bool {
-			return stats.Current[i].Before(stats.Current[j])
-		})
-		return stats, nil
-	}
-	utils.JSONGetResponse(fn, w, req)
-}
-
-func (s *Subsystem) record(w http.ResponseWriter, req *http.Request) {
-	var e Entry
-	fn := func(id string) error {
-		return s.AddEntry(id, e)
-	}
-	utils.JSONUpdateResponse(&e, fn, w, req)
-}
+// LoadAPI is a no-op: journal routes are owned by the generated OA3 handler in controller/api.
+func (s *Subsystem) LoadAPI(_ chi.Router) {}
